workloads/grobid/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: grobid
spec:
  selector:
    app: grobid
  ports:
  - port: 80
    targetPort: 8070
