workloads/grobid/ingress.yaml
---
# Source: drone/templates/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: grobid
  labels:
    app: grobid
  annotations:
    cert-manager.io/cluster-issuer: "acme-issuer"
    ingress.kubernetes.io/ssl-redirect: "true"
    kubernetes.io/ingress.class: "traefik"
    kubernetes.io/ingress.allow-http: "false"
    kubernetes.io/tls-acme: "true"
    external-dns.alpha.kubernetes.io/hostname: "grobid.softchewy.center"
spec:
  rules:
    - host: grobid.softchewy.center
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: grobid
                port:
                  number: 80
  tls:
    - hosts:
      - grobid.softchewy.center
      secretName: grobid-tls
